--- a/style.css
+++ b/style.css
@@ -51,9 +51,9 @@ margin-right: 40px;
    width: 40%;
 }
 
-/* header .navigation a:hover{
+header .navigation a:hover{
 color: green;
-} */
+} 
 
 .logo{
 width: 233.75px;
@@ -100,7 +100,7 @@ color: green;
    left: 0;
    right: 0;
    bottom: 0;
-   background-color:rgba(0, 0, 0, 0.49);
+   background-color:rgba(0, 0, 0, 0.512);
    cursor: pointer; 
  }
 
@@ -688,11 +688,11 @@ height: 48px;
 width: 30%;
 height: 75vh;
 /* height: 100%; */
-background-color: #FFFFFF;
+background-color:#ffffff;
 box-shadow: 0px 16px 40px rgba(117, 142, 254, 0.25);
 border-radius: 10px;
 margin: 15px;
-margin-bottom: 60px;
+margin-bottom: -10%;
 }
 
 .slideone h5{
