--- a/style.css
+++ b/style.css
@@ -791,7 +791,7 @@ background-color: #ffffff;
 height: 70%;
 justify-content: space-around;
 align-items: center;
-transition: transform 0.5s ease;
+  /* transition: transform 0.5s ease;  */
 }
 
 .arrowleft{
@@ -853,8 +853,10 @@ height: 85px;
 .secondlanediv{
 display:flex ;
 height: 70%;
-justify-content: space-around;
+justify-content: space-between;
 align-items: center;
+width: 73%;
+align-self: flex-end;
 /* margin-top: 5%; */
 }
 
@@ -912,23 +914,6 @@ color: #FFFFFF;
 .logoimg p{
 margin-left:15%;
 }
-
-.secondlanediv{
-   margin-left: 9%;
-}
- 
- .accradiv{
-margin-left: 9%; 
-} 
-
-.secondlanediv{
-   margin-right: -5.5%;
-}
-
-
-.sierraleonediv{
-margin-right: -5.5%;
-}   
 
 /* .lanediv{
    display: flex;
@@ -990,17 +975,17 @@ font-style: normal;
 font-weight: 500;
 font-size: 14px;
 color: #FFFFFF;
-margin-left: 80%;
+display: flex;
+align-items: center;
 }
 
-/* .socialmediadiv{
-   background-color: purple;
+.socialmediadiv{
    display: flex;
-   flex-direction: column;
-   
+   align-items: center;
    justify-content: space-between;
+   padding: 0 2%;
 
-} */
+} 
 
 
 
@@ -1024,15 +1009,16 @@ margin-left: 80%;
   .navigation{
       position:fixed;
       top: 0;
-      left: 0;
-      width: 30%;
-      height: 60%;
+      right: 0;
+      bottom: 0;
+      width: 50%;
+      height: 100%;
       display: flex;
       flex-direction: column;
       color:#ffffff;
       background-color: white;
       padding: 2rem ;
-      transform: translateX(-150%);
+      transform: translateX(100%);
       z-index: 11;
       transition: all .5s;
       margin-top: 4.5rem;
@@ -1058,7 +1044,7 @@ margin-left: 80%;
 }
 
 .navbutton{
-   align-items: center;
+   align-self: center;
 }
 
 .navigation a::before{
@@ -1098,18 +1084,35 @@ transition: .5s;
    flex-direction: column;
 }
 
+.logoandtext{
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+
+}
+footer{
+   height: auto;
+}
 
 
+.secondlanediv{
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   width: 100%;
+   padding-left: 10%;
+}
 
+.abujadiv,.nairobidiv,.contactusdiv,.sierraleonediv{
+   margin-top: 9% ;
+}
 
+.lagos,.abujadiv,.nairobidiv{
+   margin-left: 10%;
+}
 
-
-
-
-
-
-
-
-
+.smdiv{
+   width: 50%;
+}
 
 }
