--- a/aboutus.css
+++ b/aboutus.css
@@ -77,7 +77,7 @@ color: green;
 
 .navbutton{
 height: 40px;
-width: 119px;
+width: 88px;
 left: 0px;
 top: 0px;
 color:#ffffff;
@@ -442,13 +442,15 @@ footer{
       top: 0;
       right: 0;
       bottom: 0;
-      width: 50%;
+      /* width: 50%; */
+      width: 25%;
       height: 100%;
       display: flex;
       flex-direction: column;
       color:#ffffff;
       background-color: white;
-      padding: 2rem ;
+      /* padding: 2rem ; */
+      padding: 0.2rem;
       transform: translateX(100%);
       z-index: 11;
       transition: all .5s;
@@ -457,10 +459,13 @@ footer{
   }
 
   .navigation a{
-   margin: 1.5rem;
+   /* margin: 1.5rem; */
+   margin: 0.5rem;
    border-bottom:1px solid #51DD11;
-   padding-bottom:1rem ;
+   /* padding-bottom:1rem ; */
+   padding-bottom: 0.5rem;
 }
+
 .navigation a{
    color: var(--white);
    transition: all .3s;
@@ -475,7 +480,8 @@ footer{
 }
 
 .navbutton{
-   align-self: center;
+   /* align-self: center; */
+   margin: 0.5rem;
 }
 
 .navigation a::before{
