--- a/style.css
+++ b/style.css
@@ -750,7 +750,7 @@ user-select: none;
 right: 0;
 }
 
-
+ 
 .dot {
 cursor: pointer;
 width: 5%;
@@ -761,7 +761,28 @@ display: inline-block;
 transition: background-color 0.6s ease;
 margin-bottom: -30px;
 }
- 
+
+#more_1,#more_2,#more_3 {
+display: none;
+font-size: 10px;
+color: black;
+}
+
+#myBtn_1,#myBtn_2,#myBtn_3{
+width: 84px;
+height: 24px;
+font-family:'daxlinepro-light';
+font-size: 16px;
+line-height: 24px;
+color: #51DD11;
+text-decoration: none;
+margin-left: 20px;
+background-color: none;
+border: none;
+background: none;
+
+}
+
 /* Fading animation */
 .fade {
 animation-name: fade;
@@ -1578,5 +1599,15 @@ footer{
 .smdiv{
    width: 50%;
 }
+.footerarrowup{
+position: absolute;
+right: 7%;
+}
+
+.footerarrowup:hover{
+transform: translateX(-30%);
+transition: all 1s;
+}
+   
 
 }
